Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.24
Description
ACL does not yet support the deleteQueue policy ("self-destruct").
There is no option available to allow the creation of self-destruct queues as ACL only recognizes the following Queue policy types: ring, ring_strict, flow_to_disk, reject.
Additionally, if the ACL rules specify to deny the creation of a "reject" queue, then a deleteQueue is also denied.