QPID-5246: update ACL code to recognise self-destruct policy

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1534613 13f79535-47bb-0310-9956-ffa450edef68